Fixed top-banner spacing on different resolutions Other minor responsive fixes

--- a/app/app.css
+++ b/app/app.css
@@ -7,12 +7,17 @@
 
 /*** General ***/
 .wrapper{
-  padding: 3em 2em; 
+  padding: 2em 1em; 
 }
 
 
 /*** Steps ***/
 .banner .logo{width: 20%;}
+.banner.background-image{
+  background: #000 url("images/top-banner.jpg") no-repeat center center;
+  background-size: cover;
+}
+
 
 /*** Steps ***/
 #steps h3{
@@ -51,12 +56,12 @@
 }
 
 select {
-   -webkit-appearance: none;
-   -moz-appearance: none;
-   appearance: none;
+ -webkit-appearance: none;
+ -moz-appearance: none;
+ appearance: none;
 }
 select::-ms-expand { /* for IE 11 */
-    display: none;
+  display: none;
 }
 select {
   width: 100%;
@@ -160,6 +165,9 @@ a .fa{
   .right-img{
     order: 2;
   }
+  .wrapper{
+  padding: 3em 2em; 
+}
 }
 
 @media (max-width: 767px){
@@ -170,4 +178,5 @@ a .fa{
     font-size: 1em;
   }
 }
+
 
